# radchat

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  duke-oidc.md  fly.toml  pyproject.toml  requirements.txt  wrangler.toml
.claude/: settings.local.json
.docs/: duke-oauth.md
.github/workflows/: deploy.yml  update-acr-cache.yml
scripts/: cloudflare_tunnel_manager.py  setup_tunnel.py  update_acr_cache.py
src/: __init__.py  chat.py  cli.py  providers.py  server.py
src/data/: contacts.json
src/data/acr/: index.json
src/data/acr/topics/: 1.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  110.json  113.json  114.json  116.json  117.json  118.json  119.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  130.json  131.json  132.json  134.json  135.json  137.json  139.json  140.json  141.json  142.json  143.json  144.json  (+484 more)
src/static/: app.js  index.html  styles.css
src/tools/: __init__.py  acr_criteria.py  phone_catalog.py
